adding branding icon and color

--- a/action.yml
+++ b/action.yml
@@ -4,3 +4,6 @@ author: Augusto Nascimento
 runs:
   using: 'docker'
   image: 'Dockerfile'
+branding:
+  icon: 'arrow-down-circle'
+  color: 'gray-dark'
